webui: fix text overflowing in list

--- a/taxy-webui/src/index.scss
+++ b/taxy-webui/src/index.scss
@@ -1,3 +1,19 @@
 @charset "utf-8";
 
-html {}
+.list-item {
+    flex-wrap:unset;
+}
+
+.list-item-content {
+    overflow: hidden;
+}
+
+.list-item-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.list-item-description {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
